<resources>
    <string name="app_name">fithub</string>
    <string name="reserves_client">Reserves del client:</string>
    <string name="reservar">Què vols reservar?</string>
    <string name="gestionar">Què vols gestionar?</string>
    <string name="classe">Classe col·lectiva</string>
    <string name="activitat">Activitat</string>
    <string name="instalacio">Instal·lacio</string>
    <string name="aigua">Zona d\'aigua</string>
    <string name="servei">Servei</string>
    <string name="fithub">FITHUB</string>
    <string name="nom_d_usuari">Nom d\'Usuari</string>
    <string name="tipus_de_client">Tipus de Client</string>
    <string name="el_meu_compte">El meu compte</string>
    <string name="tancar_sessio">Tancar sessió</string>
    <string name="inicia_sessio">INICI DE SESSIÓ</string>
    <string name="correu_usuari">Correu electrònic</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="mostrar_contrasenya">Mostrar contrasenya</string>
    <string name="nom_app">FITHUB</string>
    <string name="iniciar_sessio">Iniciar sessió</string>
    <string name="oblidat_contrasenya">He oblidat la contrasenya</string>
    <string name="registra_t">No tens usuari? Registra\'t ara</string>
    <string name="selecciona_data">Selecciona data</string>

</resources>