<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light_gray"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_app"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"/>

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sessio"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/tv_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/et_nomusuari"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/usuari"
        android:layout_below="@id/tv_login_title"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/et_contrasenya"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_nomusuari"
        android:layout_centerHorizontal="true"
        android:hint="@string/contrasenya"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:id="@+id/check_mostrar_contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_contrasenya"
        android:layout_below="@id/et_contrasenya"
        android:layout_alignStart="@id/et_nomusuari"
        android:layout_alignEnd="@id/et_contrasenya"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sessio"
        android:layout_below="@id/check_mostrar_contrasenya"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_oblidat_contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oblidat_contrasenya"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"/>

    <TextView
        android:id="@+id/tv_registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registra_t"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_below="@id/tv_oblidat_contrasenya"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
