<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ClientActivity">

    <!-- Títol de l'aplicació -->
    <TextView
        android:id="@+id/text_titol_aplicacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/nom_app"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Menú superior dret de l'usuari -->
    <ImageButton
        android:id="@+id/boto_perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="10dp"
        android:src="@drawable/ic_perfil"
        android:onClick="toggleMenu" />

    <!-- Barra de títol -->
    <LinearLayout
        android:id="@+id/layout_titol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/text_titol_aplicacio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <!-- Títol de la gestio -->
        <TextView
            android:id="@+id/text_titol_gestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestionar"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <!-- Menú desplegable del perfil -->
    <LinearLayout
        android:id="@+id/layoutPerfilMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/boto_perfil"
        android:layout_below="@id/boto_perfil"
        android:layout_marginTop="8dp"
        android:background="@drawable/menu_background"
        android:orientation="vertical"
        android:elevation="8dp"
        android:visibility="gone"> <!-- Per defecte, menú ocult -->

        <!-- Nom d'usuari -->
        <TextView
            android:id="@+id/tv_usuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_d_usuari"
            android:textColor="@color/backgroundColorPrimary"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <!-- Tipus de client -->
        <TextView
            android:id="@+id/tv_tipus_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipus_de_client"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <!-- Barra de separació -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginBottom="8dp"/>

        <!-- Opcions del menú -->
        <TextView
            android:id="@+id/opcio_perfil1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/el_meu_compte"
            android:background="@drawable/menu_item_background"
            android:textColor="@android:color/black"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/opcio_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tancar_sessio"
            android:background="@drawable/menu_item_background"
            android:textColor="@android:color/black"
            android:padding="10dp"/>
    </LinearLayout>

    <!-- Botons de gestions -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_titol"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <Button
            android:id="@+id/boto_gestio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="Gestió d'usuari"
            android:background="@drawable/boto_personalitzat"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/boto_gestio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="Gestió d'activitat"
            android:background="@drawable/boto_personalitzat"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/boto_gestio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="Gestió d'instal·lació"
            android:background="@drawable/boto_personalitzat"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"/>

    </LinearLayout>
</RelativeLayout>
