<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Contenido principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Títol de la aplicació -->
            <TextView
                android:id="@+id/text_titol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nom_app"
                android:textSize="30sp"
                android:textStyle="bold" />

            <!-- Botón de perfil -->
            <ImageButton
                android:id="@+id/boto_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="toggleMenu"
                android:src="@drawable/ic_perfil" />

            <!-- Botó de acces al panell-->
            <ImageButton
                android:id="@+id/boto_acces_panell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="accedirPanell"
                android:src="@drawable/ic_menu" />
        </androidx.appcompat.widget.Toolbar>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Menú desplegable del perfil -->
    <LinearLayout
        android:id="@+id/layoutPerfilMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/menu_background"
        android:orientation="vertical"
        android:elevation="8dp"
        android:visibility="gone"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <!-- Nom d'usuari -->
        <TextView
            android:id="@+id/tv_usuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_d_usuari"
            android:textColor="@color/backgroundColorPrimary"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:drawablePadding="8dp"/>

        <!-- Tipus de client -->
        <TextView
            android:id="@+id/tv_tipus_usuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipus_de_client"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:drawablePadding="8dp"/>

        <!-- Barra de separació -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginBottom="8dp"/>

        <!-- Opcions del menú -->
        <TextView
            android:id="@+id/opcio_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/el_meu_compte"
            android:background="@drawable/menu_item_background"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:drawablePadding="8dp"/>

        <TextView
            android:id="@+id/opcio_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tancar_sessio"
            android:background="@drawable/menu_item_background"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:drawablePadding="8dp"/>
    </LinearLayout>

    <!-- NavigationView para el panel desplegable -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_capcelera"
        app:menu="@menu/menu_navigation_usuari" />

    </androidx.drawerlayout.widget.DrawerLayout>


</FrameLayout>
